fix little layout bugs

--- a/components/home/artist/styles.module.scss
+++ b/components/home/artist/styles.module.scss
@@ -42,19 +42,3 @@
     }
   }
 }
-
-@media only screen and (max-width: 1499px) {
-
-  //   .photo1 {
-  //     top: 0;
-  //     left: 0;
-  //   }
-  //   .photo2 {
-  //     top: 25%;
-  //     left: 0;
-  //   }
-  //   .photo3 {
-  //     left: 0;
-  //     top: 50%;
-  //   }
-}
