--- a/components/home/wild-network/styles.module.scss
+++ b/components/home/wild-network/styles.module.scss
@@ -11,7 +11,7 @@
     margin-bottom: 7rem;
   }
   div {
-    padding: 0 110px 0 100px;
+    padding: 0 6.875rem 0 6.25rem;
   }
   @media only screen and (max-width: 600px) {
     .networkSection {
