--- a/components/invisible-text-component/styles.module.scss
+++ b/components/invisible-text-component/styles.module.scss
@@ -5,7 +5,7 @@
 
   padding: 0 0.5rem;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   background-position: center;
 
   display: flex;
